fix: remove z-index for selected components

--- a/src/css/editor/Player.scss
+++ b/src/css/editor/Player.scss
@@ -144,10 +144,6 @@ $selected-shadow: 0 0 0.5em 0;
                     }
                 }
             }
-
-            &.selected{
-                z-index: 999;
-            }
         }
 
         &.show-contents{
